--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -17,6 +17,10 @@ ul {
   padding: 0;
 }
 
+ul li {
+  list-style: none !important;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -209,10 +213,6 @@ main {
   padding: 30px;
 }
 
-#flag {
-  width: 50px;
-  height: 30px;
-}
 
 .country path{
   transform: scale(0.05, 0.5);
